--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>HackMyDungeon</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    
+
     <!-- PRISM -->
     <link rel="stylesheet" href="libs/prism/prism.css">
 
@@ -28,7 +28,7 @@
             <button id="runCode">Run</button>
             <button id="viewSource">See Room Source Code</button>
         </div>
-        
+
     </div>
     <!-- PRISM -->
     <script src="libs/prism/prismify.js"></script>
@@ -36,9 +36,9 @@
     <!-- <script src="./consoleIIFE.js"></script>
     <script src="./game.js"></script> -->
 
-    <script src="./rooms/room.js"></script>
-        <!-- <script src="./gameLoop.js"></script> -->
-        <script src="/main.js"></script>
+    <script src="rooms/room.js"></script>
+    <!-- <script src="./gameLoop.js"></script> -->
+    <script src="main.js"></script>
 </body>
 
 </html>
